--- a/backend/.choreo/endpoints.yaml
+++ b/backend/.choreo/endpoints.yaml
@@ -4,5 +4,5 @@ endpoints:
   - name: "Rest API"
     port: 8000
     type: REST
-    networkVisibility: Public"
+    networkVisibility: Public
     context: /
